[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topoflow"
version = "0.1.0"
description = "3D Persistent Homology Visualizer — render topological landscapes as stunning animated GIFs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Teerth Sharma", email = "teerthsharma@gmail.com" }
]
keywords = ["persistent homology", "topology", "data visualization", "ripser", "topological data analysis"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "ripser",
    "numpy",
    "matplotlib",
    "pillow",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
topoflow = "topoflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["topoflow*"]

[tool.setuptools.package-data]
topoflow = ["py.typed"]
